<resources>
    <string name="app_name">LvivOpenData</string>

    <string name="market_label">Магазини</string>
    <string name="fitness_label">Фітнес центри</string>
    <string name="atm_label">Банкомати</string>
    <string name="barber_label">Перукарні</string>
    <string name="catering_label">Заклади Харчування</string>
    <string name="map_label">Карта</string>

    <string name="address">Адреса</string>
    <string name="work_time">Час роботи</string>
    <string name="district">Район</string>
    <string name="specialization">Тип</string>
    <string name="enterpreneur_name">Власник</string>
    <string name="cellphone">Телефон</string>
    <string name="monday">Понеділок</string>
    <string name="tuesday">Вівторок</string>
    <string name="wednesday">Середа</string>
    <string name="thursday">Четвер</string>
    <string name="friday">П\'ятниця</string>
    <string name="saturday">Субота</string>
    <string name="sunday">Неділя</string>
    <string name="square">Площа</string>
    <string name="weekday">Пн-Пт</string>
    <string name="seats">Місць</string>

    <string name="street_building">вул. %1$s, %2$s</string>
    <string name="monday_work_time">Понеділок: %s</string>
    <string name="tuesday_work_time">Віторок: %s</string>
    <string name="wednesday_work_time">Середа: %s</string>
    <string name="thursday_work_time">Четвер: %s</string>
    <string name="friday_work_time">П\'ятниця: %s</string>
    <string name="saturday_work_time">Субота: %s</string>
    <string name="sunday_work_time">Неділя: %s</string>
    <string name="weekday_work_time">Пн-Пт: %s</string>

    <string name="map_loading_items">Loading %s items
        This may take some time
    </string>

    <string name="retry">retry</string>

</resources>
